# simulate_fight

./: .gitignore  .gitmodules  CMakeLists.txt  gen_proto.bat  iocp_test.cpp  main.cpp  readme.md
design/: B_Buff.xlsx  D_地图.xlsx  D_等级.xlsx  J_技能.xlsx  W_玩家相关.xlsx  Y_英雄.xlsx  Z_战斗.xlsx  Z_装备.xlsx  Z_阵营场景.xlsx  buff.txt  process.drawio
design/jsons/: aoen_equips.json  aux_equips.json  buff.json  camp.json  equips.json  fetter_equips.json  fight_misc.json  fight_phase.json  hekes_buff.json  hero.json  hero_fetter.json  hero_fetters.json  hero_power_buff.json  hero_power_detail.json  level.json  normal_power_buff.json  other_equips.json  passive_skill.json  player_misc.json  pve_monster.json  scene.json  skill.json  star.json
design/table_parser/: config.py  main.py  parse_one.py
include/cfg/: buff_cfg.h  cfg.h  equip_cfg.h  game_cfg.h  hero_cfg.h  lottery_cfg.h  player_cfg.h  scene_cfg.h  skill_cfg.h
include/game/: actor.h  ai.h  buff.h  equip.h  fetter.h  fight.h  game.h  game_context.h  generator.hpp  hero.h  lottery.h  map.h  object.h  player.h  skill.h
include/game/ai/: common.h
include/game/buffer/: input.h  output.h
include/game/buffs/: add_hp.h
include/game/equips/: WuJinZhiRen.h  gui_suo_de_kuang_bao_zhi_ren.h  wu_jin_zhi_ren.h
include/game/event/: event.h
include/game/fetters/: demasia.h  knoxus.h
include/game/heros/: Yasuo.h
include/log/: log.h
include/manager/: buff_manager.h  cfg_manager.h  game_manager.h  object_manager.hpp
include/scene/: map.h  scene.h
include/script/: lua_adapter.h
include/server/: game_server.h
include/time/: time.h
include/timer/: heap.h  timer.h
lua_source/env/: reload.lua  set_env.lua
lua_source/logic/: hello.lua
proto/: test.proto
src/: astar.cpp  main.cpp
src/cfg/: buff_cfg.cpp  equip_cfg.cpp  game_cfg.cpp  hero_cfg.cpp  lottery_cfg.cpp  player_cfg.cpp  skill_cfg.cpp
src/game/: ai.cpp  buff.cpp  equip.cpp  fetter.cpp  fight.cpp  game.cpp  game_context.cpp  generator.cpp  hero.cpp  lottery.cpp  map.cpp  player.cpp  skill.cpp
src/manager/: buff_manager.cpp  cfg_manager.cpp  game_manager.cpp  object_manager.cpp
src/script/: lua_adapter.cpp  lua_intance.cpp  lua_lib.cpp
src/server/: game_server.cpp
src/time/: time.cpp
src/timer/: timer.cpp
src/util/: hex.py
tests/: test1.cpp  test_json.cpp
(+24 files in other folders)
